<resources>
    <string name="app_name">JyA - Establecimiento</string>
    <string name="title_activity_registrarse">Registrarse</string>
    <string name="title_activity_menuppal">Menu Principal</string>
    <string name="title.crear.oferta">Crear Oferta</string>
    <string name="title.establecer.ubicacion">Establecer Ubicación</string>
    <string name="title.lista.ofertas">Ofertas Creadas</string>
    <string name="title.editar.oferta">Editar Oferta</string>
    <string name="title.editar.perfil">Perfil</string>

    <!-- Menu xml-->
    <string name="menu_settings">Opciones</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_perfil">Perfil</string>

    <!-- Pantalla Login -->
    <string name="hint_usario">Usuario</string>
    <string name="hint_contra">Contraseña</string>
    <string name="boton_login">Login</string>
    <string name="boton_registrarse">Registrarse</string>
    <string name="checkbox_recordame">Recordame</string>
    <string name="error_login">Usuario/Contraseña incorrectos</string>

    <!-- Pantalla Registrarse -->
    <string name="hint_email_registrase">E-mail*</string>
    <string name="hint_usario_registrase">Usuario*</string>
    <string name="hint_contra_registrarse">Contraseña*</string>
    <string name="hint_repetir_contra">Repetir Contraseña*</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="label_deportes_registrarse">Deportes</string>
    <string name="hint_ubicacion">Ubicación</string>
    <string name="boton_registrar">Registrarme</string>
    <!-- Errores pantalla Registrarse -->
    <string name="error_email">El E-mail debe ser válido</string>
    <string name="error_email_repetido">El E-mail ya está registrado</string>
    <string name="error_repetir_contra">Las contraseñas deben coincidir</string>
    <string name="error_contra">La contraseña debe de tener más de 4 caracteres</string>
    <string name="error_usuario">Nombre de usuario no debe ser vacío</string>

    <!-- Pantalla menú principal -->
    <string name="textview_recordatorio">Para crear ofertas debe actualizar sus datos.</string>
    <string name="textview_restantes">Ofertas Restantes: %1$d</string>
    <string name="boton_crear_oferta">Crear Oferta</string>
    <string name="boton_ver_ofertas">Ver Creadas</string>
    <string name="boton_comprar_ofertas">Comprar Ofertas</string>
    <string name="boton_establecer_ubicacion">Establecer Ubicación</string>
    <string name="boton_denunciar_usuario">Denunciar Usuario</string>

    <string name="boton_cancelar">Cancelar</string>

    <!-- Fragment crear oferta -->
    <string name="textview.fecha">Fecha</string>
    <string name="textview.hora">Hora</string>
    <string name="textview.deporte">Deporte</string>
    <string name="textview.precioFinal">Precio Final</string>
    <string name="textview.precioHabitual">Precio Habitual</string>
    <string name="boton.crear">Crear</string>
    <string name="boton.editar">Editar</string>
    <string name="boton.eliminar">Eliminar</string>

    <!-- Fragmento oferta (para la lista de ofertas) -->
    <string name="textview.oferta.fecha">Fecha</string>
    <string name="textview.oferta.hora">Hora</string>
    <string name="textview.oferta.deporte">Deporte</string>
    <string name="textview.oferta.estado">Estado</string>

    <!-- Fragmento establecer ubicacion -->
    <string name="boton_gps">GPS</string>
    <string name="hint_ubicacion_editText">Ingrese su ubicacion</string>

    <!-- OAuth 2.0 server code -->
    <string name="server_id">98368777940-ig4vaiot43q57lrecavlo1jkmrou4ccg.apps.googleusercontent.com</string>

    <!-- Especificos de la app -->
    <string name="cant_ofertas_creadas">cantidadCreadas</string>

    <!-- Fragmento checkers deportes -->
    <string name="boton_guardar">Aceptar</string>

    <!-- Fragmento Pack -->
    <string name="TextView.TipoPack">Tipo: %1$s</string>
    <string name="TextView.PrecioPack">Precio: $ %1$.2f</string>
    <string name="TextView.CantOfertasDisponibles">Cantidad Ofertas</string>
    <string name="mensaje_dialogo_comprarPack">¿Desea comprar el pack seleccionado?</string>
    <string name="titulo_dialogo_comprarPack">Confirmar compra</string>
    <string name="confirmar_dialogo_comprarPack">Comprar</string>


</resources>
