<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/edit_text_error"
        style="@style/textoErrorDenso"
        android:paddingBottom="8dp"
        android:text="@string/error_login"
        />
    <LinearLayout
        style="@style/panelContenedor"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_text_usuario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usario"
            android:inputType="text|textNoSuggestions"
            android:imeOptions="actionNext"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/panelContenedor"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_text_contra"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contra"
            android:inputType="textPassword"
            android:focusable="true"
            android:imeOptions="actionDone"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/panelContenedor"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkbox_recordame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_recordame"
            />
    </LinearLayout>

    <Button
        style="@style/botonMenuPrincipal"
        android:id="@+id/boton_login"
        android:layout_width="120dp"
        android:text="@string/boton_login"
        android:onClick="login"
        />

    <Button
        style="@style/botonMenuPrincipal"
        android:id="@+id/boton_registrarse"
        android:layout_width="120dp"
        android:text="@string/boton_registrarse"
        android:onClick="registrarse"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>